# alaska

./: .clang-format  .envrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  PLAN.md  README.md  build.sh  flake.nix  package-lock.json  package.json  requirements.txt  run_all.sh
alaska/runtime/core/: runtime.cpp
benchmarks/: figure7.py  figure8.py  utils.py
benchmarks/patches/redis/src/: threads_mngr.c
compiler/: CMakeLists.txt  Makefile
compiler/include/: config.h
compiler/include/alaska/: Graph.h  Passes.h  graph_lite.h
compiler/include/noelle/core/: Assumptions.hpp
compiler/ldscripts/: alaska-riscv64.ld
compiler/lib/: TranslationForest.cpp  Translations.cpp
compiler/passes/: Alaska.cpp  ArgumentTrace.cpp  Escape.cpp  IntentPass.cpp  Lower.cpp  PinTracking.cpp  PlaceSafepoints.cpp  RefcountDec.cpp  RefcountInc.cpp  TranslatePass.cpp
docs/: compiler.md
memcached/: Makefile  ycsb.py
plotgen/: figure_compile.py
redis/: Makefile
runtime/: CMakeLists.txt  Makefile  README.md  alaska.h
runtime/alaska/: AllocationRequest.hpp  BarrierWorker.hpp  Configuration.hpp  DiskHeap.cpp  Domain.cpp  Domain.hpp  HandleTable.cpp  HandleTable.hpp  Heap.cpp  HeapPage.cpp  HeapPage.hpp  HugeObjectAllocator.cpp  LazyGlobal.hpp  LocalityPage.cpp  LocalityPage.hpp  Localizer.cpp  Localizer.hpp  ObjectHeader.cpp  OwnedBy.hpp  PersistentAllocation.cpp  Runtime.cpp  Runtime.hpp  ShardedFreeList.hpp  SizeClass.cpp  SizeClass.hpp  SizedAllocator.hpp  SizedPage.cpp  ThreadCache.cpp  ThreadCache.hpp  Utils.cpp  alaska.hpp  lphash_set.h  thread_tracking.in.hpp
runtime/alaska/compression/: ObjectCompressor.h  miniz.c  miniz.h
runtime/alaska/core/: Runtime.cpp  Runtime.hpp  ThreadCache.cpp  ThreadCache.hpp  ThreadRegistry.hpp
runtime/alaska/disk/: BufferPool.cpp  BufferPool.hpp  ChainedHashTable.hpp  Disk.cpp  Disk.hpp  DiskHeap.cpp  DiskHeap.hpp  Frame.hpp  Structure.cpp
runtime/alaska/disk/impl/: MurmurHash3.hpp
runtime/alaska/handles/: HandleTable.cpp  HandleTable.hpp  ObjectHeader.cpp  ObjectHeader.hpp
runtime/alaska/heaps/: Heap.cpp  Heap.hpp  HeapPage.cpp  HeapPage.hpp  HugeObjectAllocator.cpp  HugeObjectAllocator.hpp  LocalityPage.cpp  LocalityPage.hpp  Magazine.hpp  SizeClass.hpp  SizedPage.cpp  SizedPage.hpp
runtime/alaska/internal/: alaska_internal_malloc.c
runtime/alaska/util/: Arena.hpp  LazyGlobal.hpp  Logger.cpp  PersistentAllocation.cpp  RateCounter.hpp  ShardedFreeList.hpp  ShuffleAllocator.hpp  SizedAllocator.hpp  backtrace.cpp  lphash_set.h  thread_tracking.in.hpp  utils.h
runtime/alaska/work/: BarrierWorker.cpp  BarrierWorker.hpp  WorkScheduler.cpp  WorkScheduler.hpp
runtime/ck/: lock.h  map.h
runtime/core/: BarrierWorker.cpp  ConjoinedPage.cpp  DiskHeap.cpp  HandleTable.cpp  Heap.cpp  HeapPage.cpp  HugeObjectAllocator.cpp  LocalityPage.cpp  Localizer.cpp  PersistentAllocation.cpp  Runtime.cpp  SizeClass.cpp  SizedPage.cpp  ThreadCache.cpp  alaska_internal_malloc.c  liballoc.c  translate.cpp
runtime/core/disk/: BufferPool.cpp  Disk.cpp  Structure.cpp
runtime/include/: alaska.h  yukon.h
runtime/include/alaska/: AllocationRequest.hpp  Arena.hpp  BarrierManager.hpp  Configuration.hpp  ConjoinedPage.hpp  DiskHeap.hpp  HandleTable.hpp  Heap.hpp  HeapPage.hpp  HugeObjectAllocator.hpp  LazyGlobal.hpp  LocalityPage.hpp  Localizer.hpp  Magazine.hpp  ObjectAllocator.hpp  ObjectHeader.hpp  PersistentAllocation.h  RateCounter.hpp  Runtime.hpp  ShardedFreeList.hpp  SizeClass.hpp  SizedAllocator.hpp  SizedPage.hpp  ThreadCache.hpp  ThreadRegistry.hpp  alaska.hpp  alaska_internal_malloc.h  liballoc.h  lphash_set.h  utils.h
runtime/include/alaska/disk/: BufferPool.hpp  ChainedHashTable.hpp  Disk.hpp  Frame.hpp  Structure.hpp
runtime/include/alaska/sim/: HTLB.hpp  handle_ptr.hpp
runtime/include/ck/: map.h  new.h  queue.h  stack.h  template_lib.h  util.h  utility.h  vec.h
runtime/include/yukon/: yukon.hpp
runtime/rt/: barrier.cpp  barrier.hpp  halloc.cpp  init.cpp  refcount.cpp  sim.cpp  translate.cpp
runtime/sim/: HTLB.cpp  HTLB.hpp  StatisticsManager.cpp  TLB.cpp  TLB.hpp  handle_ptr.hpp  main.cpp
runtime/stub/: stub.c
runtime/test/: arena_test.cpp  barrier_worker.cpp  domain_test.cpp  handle_ptr_test.cpp  heap_test.cpp  htlb_sim_test.cpp  hugeobject_test.cpp  locality_page_test.cpp  magazine_test.cpp  runtime_test.cpp  sizeclass_test.cpp  sizedalloc_test.cpp  sizedpage_test.cpp  threadcache_test.cpp
runtime/test/graph/: graph.h
runtime/yukon/: shared.h  yukon.cpp  yukon_stub.cpp
test/: avl.cpp  chained.cpp  class.cpp  domains.c  graph.c  inc.c  list.c  nbody.lua  patchpoint.c  sanity.c  struct.c  thread_stress.c  tree.c  valist.c
test/redis/: Makefile  frag.redis
tools/: bench.py  build_deps.sh  build_gclang.sh  build_yukon.sh  build_yukon_host.sh  cross_compile.sh  dump_analysis.cpp  get_llvm.sh  hotness_hist.ipynb  prof.sh  sim_hitrate.ipynb
